test/runnable/imports/testminitBB.d
module imports.testminitBB;

import std.c.stdio;
int bb;

static this()
{
    printf("BB\n");
    bb = 1;
}

